<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".form_user"
    tools:showIn="@layout/activity_form_user">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dip"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUserName"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/nameUser"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_marginTop="15dip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/emailUser"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/passwordUser"
            android:inputType="textPassword"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="30dip" />

        <EditText
            android:id="@+id/txtCalle"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/calle"
            android:inputType="text" />
        <EditText
            android:id="@+id/txtAltura"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/altura"
            android:inputType="text" />
        <EditText
            android:id="@+id/txtLocalidad"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/localidad"
            android:inputType="text" />
        <EditText
            android:id="@+id/txtProvincia"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/provincia"
            android:inputType="text" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/submint_form"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" />


        <TextView android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"

            android:gravity="center"
            android:textSize="20dip"
            android:textColor="#0b84aa"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
